# Microservices_practice

./: CMakeLists.txt
facade_service/include/: facade_service.hpp
facade_service/src/: facade_service.cpp
include/: common.hpp  facade_service.hpp  logging_service.hpp  messages_service.hpp
logging_service/include/: logging_service.hpp
logging_service/src/: logging_service.cpp
messages_service/include/: messages_service.hpp
messages_service/src/: messages_service.cpp
src/: facade_service.cpp  logging_service.cpp  messages_service.cpp  send_get_request.cpp  send_post_request.cpp
test_programs/: send_get_request.cpp  send_post_request.cpp
